--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "coveralls": "./node_modules/.bin/gulp coveralls",
     "compile": "./node_modules/.bin/gulp compile",
     "build": "./node_modules/.bin/gulp build",
+    "rebuild": "./node_modules/.bin/gulp clean; ./node_modules/.bin/gulp build",
     "postinstall": "./node_modules/.bin/typings install",
     "serve": "concurrently --kill-others \"./node_modules/.bin/gulp watch\" \"./node_modules/.bin/lite-server\"",
     "tsc": "./node_modules/.bin/tsc",
